TestCases/Errors/threaded_movement/observations/win_04_obs.spm
"obs" "15-5" "0.000463627796089557"
"obs" "16-5" "0.000256796283045722"
"obs" "15-6" "0.000261375580885715"
"obs" "16-6" "0.00012991109164174"
"obs" "14-7" "0.000338148721414598"
"obs" "15-7" "0.000188351207510387"
"obs" "16-7" "0"
"obs" "14-8" "0.00106368033238266"
"obs" "15-8" "0"
"obs" "13-9" "0.000426457737312371"
"obs" "14-9" "0.000293880595989007"
"obs" "15-9" "0.000454545454545455"
"obs" "12-10" "0.00163398692810458"
"obs" "13-10" "0.000189744771477643"
"obs" "14-10" "0.00040226667371812"
"obs" "4-11" "0.0170181280059193"
"obs" "12-11" "0.000569476082004556"
"obs" "13-11" "0.000138619351261436"
"obs" "3-12" "0.00916401414302664"
"obs" "4-12" "0.0221365000177956"
"obs" "4-13" "0.0198815012917842"
"obs" "5-13" "0.0425"
"obs" "5-14" "0.038125"
"obs" "6-14" "0.0334259259259259"
"obs" "6-15" "0.0175730377166157"
"obs" "8-18" "0.0197967250141163"
"obs" "9-18" "0.0237575757575758"
"obs" "8-19" "0.0176618357487923"
"obs" "9-19" "0.023010101010101"
"obs" "10-19" "0.0206656034088689"
"obs" "11-19" "0.030093954248366"
"obs" "12-19" "0.0122222222222222"
"obs" "9-20" "0.00272727272727273"
"obs" "10-20" "0.00625272331154684"
"error_value" "15-5" "0"
"error_value" "16-5" "0"
"error_value" "15-6" "0"
"error_value" "16-6" "0"
"error_value" "14-7" "0"
"error_value" "15-7" "0"
"error_value" "16-7" "0"
"error_value" "14-8" "0"
"error_value" "15-8" "0"
"error_value" "13-9" "0"
"error_value" "14-9" "0"
"error_value" "15-9" "0"
"error_value" "12-10" "0"
"error_value" "13-10" "0"
"error_value" "14-10" "0"
"error_value" "4-11" "0"
"error_value" "12-11" "0"
"error_value" "13-11" "0"
"error_value" "3-12" "0"
"error_value" "4-12" "0"
"error_value" "4-13" "0"
"error_value" "5-13" "0"
"error_value" "5-14" "0"
"error_value" "6-14" "0"
"error_value" "6-15" "0"
"error_value" "8-18" "0"
"error_value" "9-18" "0"
"error_value" "8-19" "0"
"error_value" "9-19" "0"
"error_value" "10-19" "0"
"error_value" "11-19" "0"
"error_value" "12-19" "0"
"error_value" "9-20" "0"
"error_value" "10-20" "0"
